added inline css to list

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Mathew Doak</h1>
-								<p>Welcome to my Portfolio.  I am a fullstack software developer.</p>
+								<p>A fullstack software developer.</p>
 								<h3>Skills</h3>
-								<ul>
+								<ul style="list-style-type: none;">
 									<li>Python</li>
 									<li>Javascript</li>
 									<li>SQL</li>
