--- a/index.html
+++ b/index.html
@@ -25,16 +25,19 @@
 						<div class="content">
 							<div class="inner">
 								<h1>Mathew Doak</h1>
-								<p>A fullstack software developer.</p>
-								<h3>Skills</h3>
+								<p>A fullstack software developer</p>
 								<ul style="list-style-type: none;">
+									<li><h2>Skills</h2></li>
 									<li>Python</li>
 									<li>Javascript</li>
+									<li>HTML5</li>
+									<li>CSS</li>
 									<li>SQL</li>
 									<li>React</li>
 									<li>Django</li>
 									<li>Docker</li>
 									<li>Insomnia</li>
+									<li>Auth0</li>
 								</ul>
 							</div>
 						</div>
@@ -55,9 +58,15 @@
 						<!-- Intro -->
 							<article id="intro">
 								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/headshot.jpg" alt="headshot" /></span>
-								<p>Aenean ornare velit lacus, ac varius enim ullamcorper eu. Proin aliquam facilisis ante interdum congue. Integer mollis, nisl amet convallis, porttitor magna ullamcorper, amet egestas mauris. Ut magna finibus nisi nec lacinia. Nam maximus erat id euismod egestas. By the way, check out my <a href="#work">awesome work</a>.</p>
-								<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Duis dapibus rutrum facilisis. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Etiam tristique libero eu nibh porttitor fermentum. Nullam venenatis erat id vehicula viverra. Nunc ultrices eros ut ultricies condimentum. Mauris risus lacus, blandit sit amet venenatis non, bibendum vitae dolor. Nunc lorem mauris, fringilla in aliquam at, euismod in lectus. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. In non lorem sit amet elit placerat maximus. Pellentesque aliquam maximus risus, vel sed vehicula.</p>
+								<span class="image main"><img src="images/headshot.jpg" alt="headshot" style="width: 15%; height: 17%"/></span>
+								<p>Hello!  My name is Mathew.  I have held many positions,
+									and am very excited to work with you!  I am proficient in several languages,
+									and enjoy learning new tech stacks and languages as the needs arise.  Working
+									on several projects has given me a taste of what is possible through the
+									exciting field of Software Development.  I especially enjoy designing backends
+									and frontends that work together to create incredibly powerful tools and interfaces
+									that can help people in so many ways.  Check out some of my projects in the Projects section.
+								</p>
 							</article>
 
 						<!-- Work -->
