added video of wellness-whale

--- a/index.html
+++ b/index.html
@@ -61,7 +61,14 @@
 							<article id="work">
 								<h2 class="major">Work</h2>
 								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
-								<p>This is where I'll put my projects.</p>
+								<h3>Wellness Whale</h3>
+								<video width="450" height="350" controls>
+									<source src="images/Wellness-Whale.mov" type="video/quicktime">
+								</video>
+								<p>A web-based application that's designed to track your wellbeing.  Ease of use and
+									pleasant graphics are meant to help the user feel excited about their progress
+									and good about themselves.  
+								</p>
 							</article>
 
 						<!-- About -->
