removed video, added working-photo, and added placeholders for projects

--- a/index.html
+++ b/index.html
@@ -60,14 +60,26 @@
 						<!-- Work -->
 							<article id="work">
 								<h2 class="major">Work</h2>
-								<span class="image main"><img src="images/pic02.jpg" alt="" /></span>
+								<span class="image main"><img src="images/working-photo.jpg" alt="" /></span>
 								<h3>Wellness Whale</h3>
-								<video width="450" height="350" controls>
-									<source src="images/Wellness-Whale.mov" type="video/quicktime">
-								</video>
-								<p>A web-based application that's designed to track your wellbeing.  Ease of use and
-									pleasant graphics are meant to help the user feel excited about their progress
-									and good about themselves.  
+								<p>A web-based application that's designed to track your wellbeing through tracking water intake,
+									meditation, moods, and journal entries, all in one convenient progress page.
+								</p>
+								<h3>Stock Tracker</h3>
+								<p>An app designed to help people track and analyze stocks through various graphic visuals.</p>
+								<h3>Wesley's Doggie Game</h3>
+								<p>A fun game for dog lovers to distinguish their favorite dog.</p>
+								<h3>Moment of Zen</h3>
+								<p>A modal that takes a random picture and the Quote of the Day, or random quotes thereafter,
+									and combines them for a thoughtful moment.
+								</p>
+								<h3>Car Dealership</h3>
+								<p>An app that allows for the full functioning and tracking of sales personnel and clients
+									for a car dealership
+								</p>
+								<h3>Shoes and Hats</h3>
+								<p>An app that allows for the tracking and maintenance of a warehouse size volume of shoes and,
+									you guessed it, hats.
 								</p>
 							</article>
 
