moved gitlab and github icons to footer, added photos of projects, changed work to projects, added resume to skills

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 						<nav>
 							<ul>
 								<li><a href="#intro">Intro</a></li>
-								<li><a href="#work">Work</a></li>
+								<li><a href="#work">Projects</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#skills">Skills</a></li>
 								<li><a href="#contact">Contact</a></li>
@@ -59,28 +59,34 @@
 
 						<!-- Work -->
 							<article id="work">
-								<h2 class="major">Work</h2>
+								<h2 class="major">Projects</h2>
 								<span class="image main"><img src="images/working-photo.jpg" alt="" /></span>
 								<h3>Wellness Whale</h3>
 								<p>A web-based application that's designed to track your wellbeing through tracking water intake,
 									meditation, moods, and journal entries, all in one convenient progress page.
 								</p>
+								<span class="image main"><img src="images/wellness-whale.png" alt="wellness-whale" /></span>
 								<h3>Stock Tracker</h3>
 								<p>An app designed to help people track and analyze stocks through various graphic visuals.</p>
-								<h3>Wesley's Doggie Game</h3>
+								<span class="image main"><img src="images/stock-tracker.png" alt="stock-tracker" /></span>
+								<h3>Wesley's Favorite Doggie Game</h3>
 								<p>A fun game for dog lovers to distinguish their favorite dog.</p>
+								<span class="image main"><img src="images/wesleys-favorite-doggie-game.png" alt="wesleys favorite doggie game" /></span>
 								<h3>Moment of Zen</h3>
-								<p>A modal that takes a random picture and the Quote of the Day, or random quotes thereafter,
+								<p>An app that takes a random picture and the Quote of the Day, or random quotes thereafter,
 									and combines them for a thoughtful moment.
 								</p>
+								<span class="image main"><img src="images/moment-of-zen.png" alt="moment of zen" /></span>
 								<h3>Car Dealership</h3>
-								<p>An app that allows for the full functioning and tracking of sales personnel and clients
-									for a car dealership
+								<p>An app that allows for the full functioning and tracking of sales personnel and clients, services and
+									service history, and inventory for a car dealership.
 								</p>
+								<span class="image main"><img src="images/car-dealership.png" alt="car-dealership" /></span>
 								<h3>Shoes and Hats</h3>
 								<p>An app that allows for the tracking and maintenance of a warehouse size volume of shoes and,
 									you guessed it, hats.
 								</p>
+								<span class="image main"><img src="images/shoes-and-hats.png" alt="shoes and hats" /></span>
 							</article>
 
 						<!-- About -->
@@ -96,8 +102,8 @@
 
 						<!-- Skills -->
 						<article id="skills">
-							<h2 class="major">Skills</h2>
-							<!-- <span class="image main"><img src="images/pic03.jpg" alt="" /></span> -->
+							<h2 class="major">Skills/Resume</h2>
+							<span class="image main"><img src="images/resume.pdf" alt="resume" /></span>
 							<div class="centered-list">
 								<ul style="list-style-type: none;">
 									<li>Python</li>
@@ -392,6 +398,8 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 					<footer id="footer">
 						<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
 						 <p class="copyright">&copy; 2024</p>
+						 <a href="https://gitlab.com/doakmath" class="icon brands fa-gitlab"><span class="label">GitLab</span></a>
+						 <a href="https://github.com/doakmath" class="icon brands fa-github"><span class="label">GitHub</span></a>
 					</footer>
 
 			</div>
