added about section, removed intro section, added resume picture, added labels to gitlab and github in footer and label in contact for linkedin

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 								<li><a href="#intro">Intro</a></li>
 								<li><a href="#work">Projects</a></li>
 								<li><a href="#about">About</a></li>
-								<li><a href="#skills">Skills</a></li>
+								<li><a href="#skills">Skills/Resume</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -44,9 +44,9 @@
 					<div id="main">
 
 						<!-- Intro -->
-							<article id="intro">
-								<h2 class="major">Intro</h2>
-								<span class="image main"><img src="images/headshot.jpg" alt="headshot" style="width: 15%; height: 17%"/></span>
+							<!-- <article id="intro"> -->
+								<!-- <h2 class="major">Intro</h2>
+								<span class="image main"><img src="images/headshot.jpg" alt="headshot" /></span>
 								<p>Hello!  My name is Mathew.  I have held many positions,
 									and am very excited to work with you!  I am proficient in several languages,
 									and enjoy learning new tech stacks and languages as the needs arise.  Working
@@ -55,7 +55,7 @@
 									and frontends that work together to create incredibly powerful tools and interfaces
 									that can help people in so many ways.  Check out some of my projects in the Projects section.
 								</p>
-							</article>
+							</article> -->
 
 						<!-- Work -->
 							<article id="work">
@@ -93,17 +93,25 @@
 							<article id="about">
 								<h2 class="major">About</h2>
 								<span class="image main"><img src="images/headshot.jpg" alt="headshot" /></span>
-								<p>Here's where I tell you about myself
-									and what I've been up to,
-									what I'm up to, and what
-									I'd like to be up to.
+								<p>With a rich and diverse background in both psychology and computer programming, I bring a unique perspective to the world of software development. My educational journey began at Michigan State University (MSU), where I delved into the complexities of the human mind, studying psychology. This experience provided me with profound insights into thought processes, memory, and how we shape our world through our thoughts. This understanding of human behavior and cognition plays a pivotal role in my approach to software development, particularly in creating user-centric applications.
+
+									My technical journey continued at Hack Reactor, where I honed my fullstack development skills. I gained proficiency in frameworks such as React and Django and languages like Python, JavaScript, and SQL. My training included learning about various software architectures, including monolithic and microservice designs. This combination of psychological insight and technical expertise allows me to develop software that is not only robust and efficient but also intuitive and user-friendly.
+
+									I am deeply passionate about connecting people with information, other people, and resources. My aspiration is to empower individuals to become the best versions of themselves through technology. I believe in the transformative power of software to improve lives, and I am committed to developing solutions that make a meaningful impact.
+
+									Currently, I am working on several projects focused on health and wellness. These projects aim to leverage technology to promote better living and well-being. Whether it's through innovative AI applications, engaging frontend UI/UX designs, or strong backend logic, my goal is to create tools that help people lead healthier, more fulfilling lives.
+
+									Beyond my professional pursuits, I have a deep love for music, nature, and animals. These interests shape my worldview and inspire my work. I believe that a harmonious relationship with the planet and all its inhabitants is crucial for our collective well-being. I am committed to making the world a better place, one line of code at a time.
+
+									I thrive in environments that foster collaboration and communication. Whether working in small teams or independently, I bring strong communication skills and a passion for learning. I enjoy the dynamic nature of software development and am always eager to embrace new challenges and technologies.
+
+									In summary, my journey through psychology and programming has equipped me with a unique blend of skills and perspectives. I am dedicated to using these abilities to connect, empower, and uplift others through innovative software solutions. Thank you for taking the time to get to know me.
 								</p>
 							</article>
 
 						<!-- Skills -->
 						<article id="skills">
 							<h2 class="major">Skills/Resume</h2>
-							<span class="image main"><img src="images/resume.pdf" alt="resume" /></span>
 							<div class="centered-list">
 								<ul style="list-style-type: none;">
 									<li>Python</li>
@@ -117,6 +125,7 @@
 									<li>Insomnia</li>
 									<li>Auth0</li>
 								</ul>
+								<span class="image main"><img src="images/resume.png" alt="resume" /></span>
 							</div>
 						</article>
 
@@ -144,9 +153,9 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/mathew-doak-365604289" class="icon brands fa-linkedin"><span class="label">LinkedIn</span></a></li>
-									<li><a href="https://gitlab.com/doakmath" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li>
-									<li><a href="https://github.com/doakmath" class="icon brands fa-github"><span class="label">GitHub</span></a></li>
+									<li><a href="https://www.linkedin.com/in/mathew-doak-365604289" class="icon brands fa-linkedin"><span class="label">LinkedIn</span>LinkedIn</a></li>
+									<!-- <li><a href="https://gitlab.com/doakmath" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li> -->
+									<!-- <li><a href="https://github.com/doakmath" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
 								</ul>
 							</article>
 
@@ -397,9 +406,9 @@ print 'It took ' + i + ' iterations to sort the deck.';</code></pre>
 				<!-- Footer -->
 					<footer id="footer">
 						<!-- <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p> -->
-						 <p class="copyright">&copy; 2024</p>
-						 <a href="https://gitlab.com/doakmath" class="icon brands fa-gitlab"><span class="label">GitLab</span></a>
-						 <a href="https://github.com/doakmath" class="icon brands fa-github"><span class="label">GitHub</span></a>
+						 <p class="copyright">&copy; Mathew Doak 2024</p>
+						 <a href="https://gitlab.com/doakmath" class="icon brands fa-gitlab"><span class="label">GitLab</span>GitLab</a>
+						 <a href="https://github.com/doakmath" class="icon brands fa-github"><span class="label">GitHub</span>GitHub</a>
 					</footer>
 
 			</div>
