added skills, changed picture, added resume tab and link, reorganized tabs

--- a/index.html
+++ b/index.html
@@ -33,7 +33,8 @@
 								<!-- <li><a href="#intro">Intro</a></li> -->
 								<li><a href="#work">Projects</a></li>
 								<li><a href="#about">About</a></li>
-								<li><a href="#skills">Skills/Resume</a></li>
+								<li><a href="#skills">Skills</a></li>
+								<li><a href="#resume">Resume</a></li>
 								<li><a href="#contact">Contact</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
@@ -56,6 +57,62 @@
 									that can help people in so many ways.  Check out some of my projects in the Projects section.
 								</p>
 							</article> -->
+
+						<!-- About -->
+						<article id="about">
+							<h2 class="major">About</h2>
+							<span class="image main"><img src="images/headshot.jpg" alt="headshot" /></span>
+							<p>With a rich and diverse background in both psychology and computer programming,
+								I bring a unique perspective to the world of software development.
+								My educational journey began at Michigan State University (MSU),
+								 where I delved into the complexities of the human mind, studying psychology.
+								This experience provided me with profound insights into thought processes,
+								memory, and how we shape our world through our thoughts.
+								This understanding of human behavior and cognition plays a pivotal role
+								in my approach to software development, particularly in creating user-centric
+								applications</p>
+
+								<p>My technical journey continued at Hack Reactor, where I honed my fullstack
+									development skills. I gained proficiency in frameworks such as React and Django
+									and languages like Python, JavaScript, and SQL. My training included learning
+									about various software architectures, including monolithic and microservice designs.
+									This combination of psychological insight and technical expertise allows me to develop
+									software that is not only robust and efficient but also intuitive and user-friendly.</p>
+
+								<p>I am deeply passionate about connecting people with information,
+									other people, and resources. My aspiration is to empower individuals
+									to become the best versions of themselves through technology.
+									I believe in the transformative power of software to improve lives,
+									and I am committed to developing solutions that make a meaningful
+									impact.</p>
+
+								<p>Currently, I am working on several projects focused on health and
+									wellness. These projects aim to leverage technology to promote
+									 better living and well-being. Whether it's through innovative
+									  AI applications, engaging frontend UI/UX designs,
+									  or strong backend logic, my goal is to create tools that
+									  help people lead healthier, more fulfilling lives.</p>
+
+								<p>Beyond my professional pursuits, I have a deep love for music,
+									 nature, and animals. These interests shape my worldview and
+									 inspire my work. I believe that a harmonious relationship with
+									 the planet and all its inhabitants is crucial for our collective
+									 well-being. I am committed to making the world a better place,
+									 one line of code at a time.</p>
+
+								<p>I thrive in environments that foster collaboration and communication.
+									 Whether working in small teams or independently, I bring strong
+									 communication skills and a passion for learning. I enjoy the
+									 dynamic nature of software development and am always eager to
+									 embrace new challenges and technologies.</p>
+
+								<p>In summary, my journey through psychology and programming has
+									equipped me with a unique blend of skills and perspectives.
+									I am dedicated to using these abilities to connect, empower,
+									and uplift others through innovative software solutions.
+									Thank you for taking the time to get to know me.</p>
+
+						</article>
 
 						<!-- Work -->
 							<article id="work">
@@ -89,65 +146,10 @@
 								<span class="image main"><img src="images/shoes-and-hats.png" alt="shoes and hats" /></span>
 							</article>
 
-						<!-- About -->
-							<article id="about">
-								<h2 class="major">About</h2>
-								<span class="image main"><img src="images/headshot.jpg" alt="headshot" /></span>
-								<p>With a rich and diverse background in both psychology and computer programming,
-									I bring a unique perspective to the world of software development.
-									My educational journey began at Michigan State University (MSU),
-									 where I delved into the complexities of the human mind, studying psychology.
-									This experience provided me with profound insights into thought processes,
-									memory, and how we shape our world through our thoughts.
-									This understanding of human behavior and cognition plays a pivotal role
-									in my approach to software development, particularly in creating user-centric
-									applications</p>
-
-									<p>My technical journey continued at Hack Reactor, where I honed my fullstack
-										development skills. I gained proficiency in frameworks such as React and Django
-										and languages like Python, JavaScript, and SQL. My training included learning
-										about various software architectures, including monolithic and microservice designs.
-										This combination of psychological insight and technical expertise allows me to develop
-										software that is not only robust and efficient but also intuitive and user-friendly.</p>
-
-									<p>I am deeply passionate about connecting people with information,
-										other people, and resources. My aspiration is to empower individuals
-										to become the best versions of themselves through technology.
-										I believe in the transformative power of software to improve lives,
-										and I am committed to developing solutions that make a meaningful
-										impact.</p>
-
-									<p>Currently, I am working on several projects focused on health and
-										wellness. These projects aim to leverage technology to promote
-										 better living and well-being. Whether it's through innovative
-										  AI applications, engaging frontend UI/UX designs,
-										  or strong backend logic, my goal is to create tools that
-										  help people lead healthier, more fulfilling lives.</p>
-
-									<p>Beyond my professional pursuits, I have a deep love for music,
-										 nature, and animals. These interests shape my worldview and
-										 inspire my work. I believe that a harmonious relationship with
-										 the planet and all its inhabitants is crucial for our collective
-										 well-being. I am committed to making the world a better place,
-										 one line of code at a time.</p>
-
-									<p>I thrive in environments that foster collaboration and communication.
-										 Whether working in small teams or independently, I bring strong
-										 communication skills and a passion for learning. I enjoy the
-										 dynamic nature of software development and am always eager to
-										 embrace new challenges and technologies.</p>
-
-									<p>In summary, my journey through psychology and programming has
-										equipped me with a unique blend of skills and perspectives.
-										I am dedicated to using these abilities to connect, empower,
-										and uplift others through innovative software solutions.
-										Thank you for taking the time to get to know me.</p>
-
-							</article>
-
 						<!-- Skills -->
 						<article id="skills">
-							<h2 class="major">Skills/Resume</h2>
+							<h2 class="major">Skills</h2>
+							<span class="image main"><img src="images/pic01.jpg" alt="resume" /></span>
 							<div class="centered-list">
 								<ul style="list-style-type: none;">
 									<li>Python</li>
@@ -156,11 +158,21 @@
 									<li>CSS</li>
 									<li>SQL</li>
 									<li>React</li>
+									<li>Redux</li>
 									<li>Django</li>
 									<li>Docker</li>
 									<li>Insomnia</li>
 									<li>Auth0</li>
+									<li>FastAPI</li>
+									<li>RESTful</li>
 								</ul>
+							</div>
+						</article>
+
+						<!-- Resume -->
+						<article id="resume">
+							<h2 class="major">Resume</h2>
+							<div class="centered-list">
 								<span class="image main"><img src="images/resume2.png" alt="resume" /></span>
 							</div>
 						</article>
