added iframe tag for resume pdf

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 						<article id="resume">
 							<h2 class="major">Resume</h2>
 							<div class="centered-list">
-								<span class="image main"><img src="images/resume2.png" alt="resume" /></span>
+								<span class="image main"><iframe src="images/resume3.pdf" alt="resume"></iframe></span>
 							</div>
 						</article>
 
