adjusted styling of resume pdf

--- a/index.html
+++ b/index.html
@@ -173,7 +173,7 @@
 						<article id="resume">
 							<h2 class="major">Resume</h2>
 							<div class="centered-list">
-								<span class="image main"><iframe src="images/resume3.pdf" alt="resume"></iframe></span>
+								<iframe src="images/resume3.pdf" style="border: 1px solid #ccc; width: 100%; height: 100vh;" scrolling="yes"></iframe>
 							</div>
 						</article>
 
