--- a/index.html
+++ b/index.html
@@ -173,9 +173,30 @@
 						<article id="resume">
 							<h2 class="major">Resume</h2>
 							<div class="centered-list">
-								<iframe src="images/resume3.pdf" style="border: 1px solid #ccc; width: 100%; height: 100vh;" scrolling="yes"></iframe>
+								<iframe src="images/resume3.pdf#zoom=90" style="border: 1px solid #ccc; width: 100%; height: 100vh;" scrolling="yes"></iframe>
 							</div>
 						</article>
+
+						<style>
+							/* Default styles for larger screens */
+							#resume-iframe {
+								width: 100%;
+								height: 100vh;
+							}
+
+							/* Styles for smaller screens */
+							@media (max-width: 768px) {
+								#resume-iframe {
+									height: 80vh; /* Adjust the height as needed for smaller screens */
+								}
+							}
+
+							@media (max-width: 480px) {
+								#resume-iframe {
+									height: 70vh; /* Adjust the height as needed for very small screens */
+								}
+							}
+						</style>
 
 						<!-- Contact -->
 							<article id="contact">
