added pic to Skills and added soft skills

--- a/index.html
+++ b/index.html
@@ -149,8 +149,9 @@
 						<!-- Skills -->
 						<article id="skills">
 							<h2 class="major">Skills</h2>
-							<span class="image main"><img src="images/pic01.jpg" alt="resume" /></span>
+							<span class="image main"><img src="images/skills-pic.jpg" alt="resume" /></span>
 							<div class="centered-list">
+								<h3>Technical Skills</h3>
 								<ul style="list-style-type: none;">
 									<li>Python</li>
 									<li>Javascript</li>
@@ -166,7 +167,23 @@
 									<li>FastAPI</li>
 									<li>RESTful</li>
 								</ul>
+								<div class="centered-list">
+								<h3>Soft Skills</h3>
+								<ul>
+									<li>Communication</li>
+									<li>Creativity</li>
+									<li>Active Listening</li>
+									<li>Problem-solving</li>
+									<li>Reasoning</li>
+									<li>Open-mindedness</li>
+									<li>Integrity</li>
+									<li>Authenticity</li>
+									<li>Teamwork</li>
+									<li>Compassion</li>
+									<li>Work Ethic</li>
+								</ul>
 							</div>
+								</div>
 						</article>
 
 						<!-- Resume -->
