added a sentence to linkedin contact hyperlink

--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
 									</ul>
 								</form>
 								<ul class="icons">
-									<li><a href="https://www.linkedin.com/in/mathew-doak-365604289" class="icon brands fa-linkedin"><span class="label">LinkedIn</span>LinkedIn</a></li>
+									<li><a href="https://www.linkedin.com/in/mathew-doak-365604289" class="icon brands fa-linkedin"><span class="label">LinkedIn</span>Or connect with me on LinkedIn</a></li>
 									<!-- <li><a href="https://gitlab.com/doakmath" class="icon brands fa-gitlab"><span class="label">GitLab</span></a></li> -->
 									<!-- <li><a href="https://github.com/doakmath" class="icon brands fa-github"><span class="label">GitHub</span></a></li> -->
 								</ul>
